--- a/mysite/portal/templates/portal/result.html
+++ b/mysite/portal/templates/portal/result.html
@@ -1,12 +1,13 @@
-<!-- {% load staticfiles %} -->
+{% load staticfiles %}
+
 <!DOCTYPE HTML>
 <html>
 <head>
 <title>Perfect Women</title>
   <meta charset="utf-8">
-  <link href="../../static/css/bootstrap.css" rel='stylesheet' type='text/css' />
-  <link href="../../static/css/font-awesome.min.css" rel='stylesheet' />
-  <link href="../../static/images/favicon.ico" type="favicon.ico" rel="shortcut icon" />
+  <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
+  <link href="{% static 'css/font-awesome.min.css' %}" rel='stylesheet' />
+  <link href="{% static 'images/favicon.ico' %}" type="favicon.ico" rel="shortcut icon" />
 
 <!-- here linked script
 <script src="js/jquery.min.js"></script>
@@ -23,8 +24,8 @@
 </script>
 -->
   <link href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
-  <link href="../../static/css/awesome-bootstrap-checkbox.css" rel='stylesheet' />
-  <link href="../../static/css/result.css" rel='stylesheet' type='text/css' />
+  <link href="{% static 'css/awesome-bootstrap-checkbox.css' %}" rel='stylesheet' />
+  <link href="{% static 'css/result.css' %}" rel='stylesheet' type='text/css' />
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   <body>
