--- a/mysite/portal/static/css/result.css
+++ b/mysite/portal/static/css/result.css
@@ -6,8 +6,11 @@ html, body {
 }
 
 body {
-	padding: 5rem 0;
+	/*padding: 5rem 0;*/
+	background: smokewhite;
+	color: rgba(0,0,0,0.74);
 }
+
 
 .item-box {
 	margin-bottom: 5rem;
@@ -15,7 +18,7 @@ body {
 
 .item-img {
 	height: 200px;
-  margin: 0 auto;
+  margin: 3em auto;
   display: block;
 }
 
@@ -28,8 +31,8 @@ body {
 .item-tag {
   position: absolute;
   background-color: #eee;
-  padding: 0 0.5rem;
-  font-size: 0.8rem;
+	padding: 0.4em 0.8rem;
+  font-size: 0.5rem;
 }
 
 .item-category {
@@ -40,6 +43,7 @@ body {
   border: solid 1px #eee;
   background-color: #fff;
   padding: 0 0.5rem;
+  display: none;
 }
 
 .item-price {
@@ -49,10 +53,13 @@ body {
 
 .maker-name {
 	display: block;
+	font-size: 0.8em;
 }
 
 .item-name {
-	font-size: 1.4rem;
+    font-size: 1rem;
+    line-height: 1.2;
+    margin-bottom: 0.6em;
 }
 
 .hashtags {
@@ -63,23 +70,60 @@ body {
 	color: rgba(233, 30, 99, 0.41);
 }
 
+
+
+.overlay {
+	background-color: rgba(0,0,0, 0.67);
+	width: 100%;
+	height: 100vh;
+	position: absolute;
+	color: rgba(255,255,255, 0.87);
+}
+
+.overlay-text {
+	position: absolute;
+	width: 100%;
+	line-height: 100vh;
+	text-align: center;
+}
+
+.jumbotron h1 {
+		font-size: 1.3em;
+		margin: 0 0 1em;
+}
+
+.jumbotron .material-icons {
+		font-size: 3em;
+}
+
 .form-container {
 	    max-width: 720px;
+}
+
+.q {
+	margin-bottom: 2em;
+}
+
+.q .material-icons {
+	vertical-align: -1em;
+	color: #999;
 }
 
 .bubble {
   border: solid 5px #eee;
   border-radius: 15px;
-  margin-bottom: 2rem;
+/*  margin-bottom: 2rem;*/
 }
 
 .bubble.question {
 	padding: 1rem;
 	margin-right: 20%;
+	display: inline-block;
 }
 
 .bubble.answer {
 	margin-left: 20%;
+	margin-bottom: 2em;
 }
 
 .answer-btn {
@@ -134,5 +178,33 @@ body {
 	display: none;
 }
 
+.btn-wrapper {
+	margin: 4em 0 4em;
+}
 
+.footer {
+	background-color: #c3c3c3;
+	height: 80px;
+	margin-top: 8em;
+}
+
+/*.js-fade {
+	opacity: 0;
+	transform: translate(0, 50px);
+	transition: all 1s;
+}
+
+.is-2nd {
+	transition-delay: 200ms;
+}
+
+.is-3rd {
+	transition-delay: 400ms;
+}
+
+.js-fade.is-on {
+	opacity: 1;
+  -webkit-transform: translate(0, 0);
+  transform: translate(0, 0);
+}*/
 
