--- a/mysite/portal/templates/portal/result.html
+++ b/mysite/portal/templates/portal/result.html
@@ -25,13 +25,25 @@
 -->
   <link href="https://npmcdn.com/basscss@8.0.1/css/basscss.min.css" rel="stylesheet">
   <link href="{% static 'css/awesome-bootstrap-checkbox.css' %}" rel='stylesheet' />
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
   <link href="{% static 'css/result.css' %}" rel='stylesheet' type='text/css' />
+  <script href="{% static 'js/jquery.pjax.min.js' %}" ></script>
+  <script href="{% static 'js/pjax.js' %}" ></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
   <body>
+  <header class="jumbotron text-center">
+
+    <i class="material-icons">account_circle</i>
+    <h1 class="service-title">PERFECT WOMAN</h1>
+    <p>
+    あなたにオススメの商品はこちらです。
+    </p>
+  </header>
 
     <div class="container">
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
@@ -54,7 +66,7 @@
           <span>#界面活性剤</span>
         </span>
       </div>
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
@@ -77,7 +89,7 @@
           <span>#界面活性剤</span>
         </span>
       </div>
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
@@ -101,7 +113,7 @@
         </span>
       </div>
       <div class="clearfix visible-sm-block"></div>
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
@@ -124,7 +136,7 @@
           <span>#界面活性剤</span>
         </span>
       </div>
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
@@ -147,7 +159,7 @@
           <span>#界面活性剤</span>
         </span>
       </div>
-      <div class="col-sm-4 item-box">
+      <div class="col-sm-4 item-box js-fade">
         <div class="img-wrapper">
           <span class="item-tag">オススメ度90</span>
           <img src="../../static/images/orbis.jpg" class="item-img"/>
