--- a/mysite/portal/templates/portal/result.html
+++ b/mysite/portal/templates/portal/result.html
@@ -3,7 +3,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Perfect Women</title>
+<title>Cosmerge</title>
   <meta charset="utf-8">
   <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
   <link href="{% static 'css/font-awesome.min.css' %}" rel='stylesheet' />
@@ -36,7 +36,7 @@
   <header class="jumbotron text-center">
 
     <i class="material-icons">account_circle</i>
-    <h1 class="service-title">PERFECT WOMAN</h1>
+    <h1 class="service-title">cosmerge</h1>
     <p>
     あなたにオススメの商品はこちらです。
     </p>
